# krust-pico

./: Cargo.toml
.cargo/: config
src/: main.rs
