[package]
name = "krust-pico"
version = "0.1.0"
authors = ["Ryan Hipps <ryanhippsdesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
embedded-hal = { version = "0.2.5"}
embedded-time = "0.12.0"
panic-halt= "0.2.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
rp2040-hal = { version = "0.2.0"}

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp-pico = "0.2.0"

[features]
default = ["rt", "boot2"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]