[package]
name = "krust-pico"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp-pico = { git = "https://github.com/rp-rs/rp-hal", rev = "98fd6c1724e3fbea60940d67e57567e2e98df598" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "98fd6c1724e3fbea60940d67e57567e2e98df598", features = ["rt"] }
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
futures = { version = "0.3", default-features = false, optional = true }
embedded-hal ="0.2.5"
panic-halt= "0.2.0"
cortex-m-rtic = "0.6.0-rc.4"

[dev-dependencies]
panic-halt= "0.2.0"

# defmt = "0.2.0"
# defmt-rtt = "0.2.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]