[package]
name = "krust-pico"
version = "0.1.0"
authors = ["Ryan Hipps <ryanhippsdesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp-pico = { git = "https://github.com/rp-rs/rp-hal", rev = "98fd6c1724e3fbea60940d67e57567e2e98df598" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "98fd6c1724e3fbea60940d67e57567e2e98df598", features = ["rt"] }
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
futures = { version = "0.3", default-features = false, optional = true }
embedded-hal ="0.2.5"
panic-halt= "0.2.0"
cortex-m-rtic = "0.6.0-rc.4"
nb = "1.0"
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "df06e4ac94a5b2c985d6a9426dc4cc9be0d535c0" }
heapless = "0.7.9"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "4f0d81e594ea9934f9c4c38ed9824ad0cce4ebb5" }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"

[dev-dependencies]
panic-halt= "0.2.0"

# defmt = "0.2.0"
# defmt-rtt = "0.2.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]